--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   },
+  "scripts":{
+    "start":"node index.js"
+  },
+
   "devDependencies": {
     "dotenv": "^8.2.0"
   }
