--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "dotenv": "^8.2.0"
   },
   "scripts":{
     "start":"node index.js"
